--- a/imagens/desafio.html
+++ b/imagens/desafio.html
@@ -6,7 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso online</title>
 </head>
+<style>
+    h1{
+        font-family: sans-serif;
+        color: aliceblue;
+        text-align: center;
+        background-image: url(computador.jpg);
+        background-position: 100%;
+    }
+    h3{
+        background-color: black;
+        color: aliceblue;
+    }
+    .t1{
+         background-color: rgb(131, 131, 131);
+
+    }
+    h4{
+        color: aliceblue;
+        background-color: black;
+        text-align: center;
+    }
+    .menu1{
+        text-align: left;
+    }
+
+</style>
+
 <body>
-    
+    <ul class="menu1">
+        <li>INICIO</li>
+        <li>QUEM SOU EU</li>
+        <LI>CONTATO</LI>
+    </ul>
+    <h1>CURSO WEB FUNDAMENTOS</h1>
+    <h3>Aprenda Html,CSS e Javascript</h3>
+    <ul class="menu2">
+      <li>SELETORES</li>
+      <li>POSICIONAMENTO</li>
+      <li>FONTES E ICONES</li>
+    </ul>
+    <br>
+    <h2 class="t1">Titulo</h2>
+    <p>Primeiro Parágrafo de exemplo</p>
+    <p> Segundo paragrafo de exemplo</p>
+    <h4>Copyright 2023</h4>
 </body>
 </html>
