mudanca_estilo_cards
mudei o estilo e aposição dos cards

--- a/imagens/_projetocss.html
+++ b/imagens/_projetocss.html
@@ -19,24 +19,24 @@
             </nav>
             <div class="hero-content">
                 <h1>Curso Web Fundamentos</h1>
-                <h2>Aprenda HTML,CSS e JAvascript</h2>
+                <p>Aprenda HTML,CSS e JAvascript</p>
 
             </div>
         </header>
         <main> <!--essa tag é para indicar a parte escrita da pagina textos etc...-->
          <section class="content-section">
-        <div class="card">
+        <div class="card card-1"><!--estou definindo uma classe -->
             <img src="Imagens/card_01.png"alt="">
             <p>Selectores</p>
         </div>
 
          
-         <div class="card">
+         <div class="card card-2">
             <img src="Imagens/card_02.jpg"alt="">
             <p>POSICIONAMENTO</p>
 
          </div>
-         <div class="card">
+         <div class="card card-3">
             <img src="Imagens/card_03.jpg"alt="">
             <p>FONTES</p>
 
